2007-06-12  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/CallSite.cs
	  Mono.Cecil/ModuleReference.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/AssemblyDefinition.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/AssemblyNameReference.cs
	  Mono.Cecil/MemberReference.cs
	  Mono.Cecil/Resource.cs
	  Mono.Cecil/ParameterReference.cs:
		Implement explicitely IAnnotationProvider.

2007-06-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyNameReference.cs:
		Cache the fullname when possible.

2007-05-31  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ModuleDefinition.cs:
		Add types to the module and members to the context
		on inject.

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Improve resolve, works for people requiring
		.net 1.0 assemblies when they only have 1.1.

2007-05-30  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/DefaultAssemblyResolver.cs:
		Add a RegisterAssembly method to register an
		assembly to the cache without having to resolve it.

	* Mono.Cecil/DefaultReferenceImporter.cs:
		Make methods virtual.

	* Mono.Cecil.dll.sources
	  Mono.Cecil.csproj
	  Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/IReferenceImporter.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/ImportContext.cs
	  Mono.Cecil/NullReferenceImporter.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ReflectionController.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/GenericContext.cs
	  Mono.Cecil/DefaultReferenceImporter.cs
	  Mono.Cecil/PropertyDefinition.cs:
		Provide a IReferenceImporter to customize how
		types are injected from an assembly to another.

2007-05-28  Jb Evain  <jbevain@novell.com>

	* Borrow annotations concept from boo ast node.
	  Should be useful for the linker.

2007-05-23  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Emit MemberReferences rows on demand.

2007-05-16  Jb Evain  <jb@nurv.fr>
