@@ -1,5 +1,11 @@
 2007-06-12  Jb Evain  <jbevain@novell.com>
 
+	* Mono.Cecil/StructureWriter.cs,
+	  Mono.Cecil/ReflectionWriter.cs:
+		Revert the on demand creation of memberref.
+
+2007-06-12  Jb Evain  <jbevain@novell.com>
+
 	* Mono.Cecil/CallSite.cs
 	  Mono.Cecil/ModuleReference.cs
 	  Mono.Cecil/CustomAttribute.cs
